fix: Dropdown initial visibility set to hidden

--- a/src/components/AccountDropdown/AccountDropdown.css
+++ b/src/components/AccountDropdown/AccountDropdown.css
@@ -14,6 +14,7 @@
 
 #hideDropdown {
   opacity: 0;
+  visibility: hidden;
 }
 
 #appear {
