--- a/src/components/Poster/Poster.css
+++ b/src/components/Poster/Poster.css
@@ -18,5 +18,11 @@
 
 .row__poster:hover {
   transform: scale(1.3);
+  filter: brightness(100%);
   z-index: 3;
+}
+
+.row__poster:hover+img {
+  margin-left: 30px;
+  transition: margin-left 0.5s;
 }
