--- a/src/components/Row/Row.css
+++ b/src/components/Row/Row.css
@@ -30,6 +30,10 @@
   z-index: 1;
 }
 
+.slider-row:hover {
+  /* filter: brightness(30%); */
+}
+
 .slider-row::-webkit-scrollbar {
   display: none;
 }
